# Steam-User-Stats-Bot

./: .gitignore  Dockerfile  README.md  makefile  pyproject.toml  run.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 2023_03_08_1859-b9fd742e7961_add_user_table.py
steam_user_stats_bot/: alembic.ini  config.py
steam_user_stats_bot/bots/discord/: __init__.py  bot.py  utils.py
steam_user_stats_bot/bots/discord/cogs/: __init__.py  achievements.py  general.py  setup.py
steam_user_stats_bot/clients/: steam.py
steam_user_stats_bot/db/: schema.py  setup.py
steam_user_stats_bot/models/: _base.py  bots.py  db.py  exceptions.py  steam.py
steam_user_stats_bot/services/: db.py  steam.py
